name: treant
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD3
author: Getty Ritter <gettylefou@gmail.com>
maintainer: Getty Ritter <gettylefou@gmail.com>
copyright: @2018 Getty Ritter
-- category:
build-type: Simple
cabal-version: >=1.14

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >=4.7 && <5
               , random
               , text
               , containers
  default-language: Haskell2010
  default-extensions: ScopedTypeVariables
  exposed-modules: Treant
